# PAMP-auth-service

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: README.md  build.yml  clippy.yml  format.yml  test.yml
src/: api_docs.rs  lib.rs  main.rs
src/auth/: jwt.rs  middleware.rs  mod.rs
src/db/: mod.rs
src/entities/: mod.rs  user.rs
src/handlers/: auth_handler.rs  debug_handler.rs  google_handler.rs  mod.rs  student_handler.rs  teacher_handler.rs  user_handler.rs
src/providers/: google_provider.rs  mod.rs
src/services/: mod.rs  notification_service.rs  user_service.rs
tests/: common.rs  debug_handler_test.rs  jwt_test.rs  student_handler_test.rs  teacher_handler_test.rs  user_endpoints_test.rs  user_handler_test.rs  user_service_test.rs
