[package]
name = "PAMP-auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Using a version that's compatible with utoipa-swagger-ui
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["rt", "macros"] }

dotenvy = "0.15.7"

oauth-axum = "0.1.4"
log = "0.4.27"

# OpenAPI documentation
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }